第一次提交

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "myproject",
+  "name": "10.18task",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "antd": "^3.24.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0",
+    "sass": "^1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +29,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
